<resources>
    <string name="app_name">Groupay</string>

    <string name="name">Nome</string>
    <string name="email">Email</string>
    <string name="cpf">CPF</string>
    <string name="phone">Telefone</string>
    <string name="passworld">Senha</string>

    <string name="cardNumber">Número</string>
    <string name="cardName">Nome</string>
    <string name="cardDate">Vencimento</string>
    <string name="cardCVV">CVV</string>

    <string name="balance">Saldo</string>
    <string name="groups">Grupos</string>
    <string name="myInvoices">Minhas contas</string>
    <string name="likedInvoices">Contas que participo</string>

    <string name="dueDate">Data de vencimento</string>
    <string name="status">Status</string>
    <string name="value">Valor</string>
    <string name="paid">Pago</string>
    <string name="notPaid">Não pago</string>

    <string name="userRegister">Criar conta</string>
    <string name="groupRegister">Criar grupo</string>
    <string name="register">Criar</string>
    <string name="cardRegister">Registrar cartão</string>

    <string name="newInvoice">Uma nova conta chegou para você</string>

    <string name="divideInvoice">Dividir conta</string>
    <string name="payInvoice">Pagar conta</string>
    <string name="managePayment">Visualizar o pagamento</string>

    <string name="members">Membros</string>

    <string name="msgErrorName">Nome inválido</string>
    <string name="msgErrorEmail">Email inválido</string>
    <string name="msgErrorCPF">CPF inválido</string>
    <string name="msgErrorTelefone">Telefone inválido</string>
    <string name="msgErrorSenha">Senha inválido</string>
    <string name="msgErrorOnRegisterUser">Erro ao registrar o usuário</string>
    <string name="msgErrorOnRegisterCreditCard">Erro ao registrar o cartão de crédito.</string>
    <string name="msgErrorOnGetUserData">Erro ao recuperar os dados do usuário</string>
    <string name="msgErrorNumberCard">Número inválido</string>
    <string name="msgErrorNameCard">Nome inválido</string>
    <string name="msgErrorCVVCard">CVV inválido</string>

    <string name="msgOk">OK</string>

    <string-array name="month_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>

    <string-array name="year_array">
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
        <item>2023</item>
        <item>2024</item>
    </string-array>

</resources>
