<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginPatrol"
        android:text="@string/userRegister"
        android:textSize="@dimen/titlePatrol"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/marginPatrol"
        android:layout_marginEnd="@dimen/marginPatrol"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@id/pbLoading"
        app:layout_constraintTop_toTopOf="@id/tvTitle">

        <TextView
            android:id="@+id/tvName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="@dimen/textPatrol" />

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textPatrol" />

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="@dimen/textPatrol" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textPatrol" />

        <TextView
            android:id="@+id/tvCPF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cpf"
            android:textSize="@dimen/textPatrol" />

        <EditText
            android:id="@+id/etCPF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textPatrol" />

        <TextView
            android:id="@+id/tvPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:textSize="@dimen/textPatrol" />

        <EditText
            android:id="@+id/etPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textPatrol" />

        <TextView
            android:id="@+id/tvPassworld"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/passworld"
            android:textSize="@dimen/textPatrol" />

        <EditText
            android:id="@+id/etPassworld"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textSize="@dimen/textPatrol" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/pbLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/btnRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textSize="@dimen/buttonPatrol"
        app:layout_constraintBottom_toBottomOf="parent" />

</android.support.constraint.ConstraintLayout>