<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterCreditCardActivity">

    <TextView
        android:id="@+id/tvUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginPatrol"
        android:textSize="@dimen/titlePatrol"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginPatrol"
        android:text="@string/cardRegister"
        android:textSize="@dimen/titlePatrol"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvUserName" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/marginPatrol"
        android:layout_marginEnd="@dimen/marginPatrol"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@id/pbLoading"
        app:layout_constraintTop_toTopOf="@id/tvTitle">

        <TextView
            android:id="@+id/tvCardNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cardNumber"
            android:textSize="@dimen/textPatrol" />

        <EditText
            android:id="@+id/etCardNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textPatrol" />

        <TextView
            android:id="@+id/tvCardName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cardName"
            android:textSize="@dimen/textPatrol" />

        <EditText
            android:id="@+id/etCardName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textPatrol" />

        <TextView
            android:id="@+id/tvCardDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cardDate"
            android:textSize="@dimen/textPatrol" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">

            <Spinner
                android:id="@+id/spinnerMonth"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:entries="@array/month_array"
                android:textSize="@dimen/textPatrol" />

            <Spinner
                android:id="@+id/spinnerYear"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:entries="@array/year_array"
                android:textSize="@dimen/textPatrol" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvCardCVV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cardCVV"
            android:textSize="@dimen/textPatrol" />

        <EditText
            android:id="@+id/etCardCVV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textPatrol" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/pbLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/btnRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textSize="@dimen/buttonPatrol"
        app:layout_constraintBottom_toBottomOf="parent" />


</android.support.constraint.ConstraintLayout>